# Coldsilo

./: Cargo.toml  README.md
src/: disk.rs  error.rs  lib.rs  manifest.rs  ops.rs
